syntax = "proto3";
package types;
option go_package  = ".";

message BasketItem {
  string id = 1;
  string name = 2;
  string brand = 3;
  string category = 4;
  double Price = 5;
  int32 quantity = 6;
}

message Idstruct {
    string id = 1;
    string name = 2;
}

message Pb_Basket {
  string invoiceNumber = 1; 
  string saleDateTime = 2; 
  string saleTimestamp = 3;  
  Idstruct store = 4;
  Idstruct clerk = 5;
  string TerminalPoint = 6;
  repeated BasketItem BasketItems = 7;
  double nett = 8;  
  double vat = 9;
  double total = 10; 
}


